--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 </div>
                 <div class="input-group">
                     <label for="pickup-place">Pickup Place</label>
+                    <select id="pickup_place">
+                        <option value="" selected="selected">select</option>
+                    </select>
+                    
                 </div>
 
                     <label for="drop">Dropoff Place</label>
