--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="email" id="email">
                 </div>  
                 <div class="input-group">
-                    <label for="pickup">Pickup Date/Time</label>
+                    <label for="pickup_time">Pickup Date/Time</label>
                     <input type="datetime-local" id="pickup_time">
                 </div>
                 <div class="input-group">
@@ -40,10 +40,16 @@
                     <input type="text" id="dropoff" list="destinations">
                     <datalist id="destinations">
                         <option value="Airport"></option>
-
+                        <option value="Beach"></option>
+                        <option value="Fred Flinstone's House"></option>
                     </datalist>
-
                 </div>
+            </div>
+            <div class="column">
+                <fieldset>
+                    
+                </fieldset>
+
             </div>
         </div>
         <div class="options">
