--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input type="text" id="phone">
                 </div>
                 <div class="input-group"> 
-                    <label for="email">Email Address</label>
+                    <label for="email">Email</label>
                     <input type="email" id="email">
                 </div>  
                 <div class="input-group">
