--- a/index.html
+++ b/index.html
@@ -4,85 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Validation Form 4</title>
+    <title>Validation Form</title>
 </head>
 <body>
-    <form class="myForm">
+    <div class="myForm">
         <div class="row">
-            <div class="column">
-                <div class="input-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name">
-                </div>
-                <div class="input-group">
-                    <label for="phone">Phone</label>
-                    <input type="text" id="phone">
-                </div>
-                <div class="input-group"> 
-                    <label for="email">Email</label>
-                    <input type="email" id="email">
-                </div>  
-                <div class="input-group">
-                    <label for="pickup_time">Pickup Date/Time</label>
-                    <input type="datetime-local" id="pickup_time">
-                </div>
-                <div class="input-group">
-                    <label for="pickup-place">Pickup Place</label>
-                    <select id="pickup_place">
-                        <option value="" selected="selected">select</option>
-                        <option value="office">Taxi Office</option>
-                        <option value="townhall">Town Hall</option>
-                        <option value="telepathy">We'll Guess</option>
-                    </select>
-                </div>
-                <div class="input-group">
-                    <label for="dropoff">Dropoff Place</label>
-                    <input type="text" id="dropoff" list="destinations">
-                    <datalist id="destinations">
-                        <option value="Airport"></option>
-                        <option value="Beach"></option>
-                        <option value="Fred Flinstone's House"></option>
-                    </datalist>
-                </div>
-            </div>
-            <div class="column">
-                <fieldset class="taxi">
-                    <legend>Which taxi do you require?</legend>
-                    <label>
-                        <input type="radio" id="taxi_car" value="car">
-                        Car
-                    </label>
-                    <label> 
-                        <input type="radio" id="taxi_van" value="van">
-                        Van
-                    </label>
-                    <label>
-                        <input type="radio" id="taxi_tuk" value="tuk">
-                        Tuk Tuk
-                    </label>
-                </fieldset>
 
-                <fieldset class="extras">
-                    <legend>Extras</legend>
-                    <label>
-                        <input type="checkbox" id="extras_baby" value="baby">
-                        Baby Seat
-                    </label>
-                    <label>
-                        <input type="checkbox" id="extras_wheel" value="wheelchair">
-                        Wheelchair Access
-                    </label>
-                    <label>
-                        <input type="checkbox" id="extras_tip" value="tip">
-                        Stock Tip
-                    </label>
-                </fieldset>
-            </div>
         </div>
-            <div class="row">
-                <button>Submit Booking</button>
-            </div>
-    </form>
-
+    </div>
 </body>
 </html>
