--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <div class="myForm">
         <div class="row">
+            <div class="column">
+                <div class="input-group">
+                    <label for="customer_name">Name</label>
+                    <input type="text" id="Customer_name">
+                </div>
 
+
+            </div>
         </div>
     </div>
 </body>
