--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
                     <label for="customer_name">Name</label>
                     <input type="text" id="Customer_name">
                 </div>
+                <div class="input-group">
+                    <label for="phone_number">Phone</label>
+                    <input type="tel" id="phone_number">
+                </div>
+                <div class="input-group">
+                    <label for="email_address">Email</label>
+                    <input type="email" id="email_address">
+                </div>
+                <div class="input-group">
+                    <label for="pickup">Pickup Place</label>
+                    
+                </div>
 
 
             </div>
