--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                         <option value="telepathy">We'll guess</option>
                     </select>
                 </div>
+                <div class="input-group">
+                    <label for="dropoff_place">Dropoff Place</label>
+                    <input type="text" id="dropoff_place">
+                </div>
 
 
             </div>
