--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
                         <label><input type="radio" id="taxi_car" value="car"> Car</label>
                         <label><input type="radio" id="taxi_van" value="van"> Van</label>
                         <label><input type="radio" id="taxi_tuk" value="tuktuk"> Tuk Tuk</label>
-
+                    </fieldset>
+                    <fieldset class="Extras">
+                        <legend>Extras</legend>
+                        <label><input type="checkbox" id="extras_baby" value="baby">Baby Seat</label>
+                        <label><input type="checkbox" id="extras_wheel" value="wheelchair">Wheelchair Access</label>
+                        <label><input type="checkbox" id="extras_tip" value="tip">Stock Tip</label>
                     </fieldset>
                 </div>
 
